--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -3,7 +3,9 @@
   :root, :host {
     --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --color-red-50: oklch(.971 .013 17.38);
     --color-red-200: oklch(.885 .062 18.334);
+    --color-red-300: oklch(.808 .114 19.571);
     --color-red-500: oklch(.637 .237 25.331);
     --color-red-600: oklch(.577 .245 27.325);
     --color-red-700: oklch(.505 .213 27.518);
@@ -33,7 +35,6 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: .25rem;
-    --container-3xl: 48rem;
     --container-4xl: 56rem;
     --container-7xl: 80rem;
     --text-xs: .75rem;
@@ -357,10 +358,6 @@
     display: grid;
   }
 
-  .hidden {
-    display: none;
-  }
-
   .inline {
     display: inline;
   }
@@ -417,10 +414,6 @@
     width: 50%;
   }
 
-  .w-1\/3 {
-    width: 33.3333%;
-  }
-
   .w-1\/4 {
     width: 25%;
   }
@@ -459,10 +452,6 @@
 
   .w-full {
     width: 100%;
-  }
-
-  .max-w-3xl {
-    max-width: var(--container-3xl);
   }
 
   .max-w-4xl {
@@ -644,6 +633,10 @@
 
   .border-green-200 {
     border-color: var(--color-green-200);
+  }
+
+  .border-red-300 {
+    border-color: var(--color-red-300);
   }
 
   .bg-\[\#e8efff\] {
@@ -905,6 +898,10 @@
     color: var(--color-red-500);
   }
 
+  .text-red-600 {
+    color: var(--color-red-600);
+  }
+
   .text-red-700 {
     color: var(--color-red-700);
   }
@@ -1002,12 +999,20 @@
       background-color: var(--color-green-700);
     }
 
+    .hover\:bg-red-50:hover {
+      background-color: var(--color-red-50);
+    }
+
     .hover\:bg-red-600:hover {
       background-color: var(--color-red-600);
     }
 
     .hover\:text-gray-900:hover {
       color: var(--color-gray-900);
+    }
+
+    .hover\:text-red-700:hover {
+      color: var(--color-red-700);
     }
 
     .hover\:underline:hover {
