--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -11,7 +11,6 @@
     --color-red-700: oklch(.505 .213 27.518);
     --color-green-50: oklch(.982 .018 155.826);
     --color-green-200: oklch(.925 .084 155.995);
-    --color-green-500: oklch(.723 .219 149.579);
     --color-green-600: oklch(.627 .194 149.214);
     --color-green-700: oklch(.527 .154 150.069);
     --color-green-800: oklch(.448 .119 151.328);
@@ -354,10 +353,6 @@
     display: flex;
   }
 
-  .grid {
-    display: grid;
-  }
-
   .hidden {
     display: none;
   }
@@ -402,24 +397,8 @@
     height: fit-content;
   }
 
-  .h-screen {
-    height: 100vh;
-  }
-
-  .min-h-full {
-    min-height: 100%;
-  }
-
   .min-h-screen {
     min-height: 100vh;
-  }
-
-  .w-1\/2 {
-    width: 50%;
-  }
-
-  .w-1\/4 {
-    width: 25%;
   }
 
   .w-4 {
@@ -446,10 +425,6 @@
     width: calc(var(--spacing) * 16);
   }
 
-  .w-24 {
-    width: calc(var(--spacing) * 24);
-  }
-
   .w-fit {
     width: fit-content;
   }
@@ -470,14 +445,6 @@
     max-width: 100%;
   }
 
-  .flex-1 {
-    flex: 1;
-  }
-
-  .flex-\[2\] {
-    flex: 2;
-  }
-
   .shrink-0 {
     flex-shrink: 0;
   }
@@ -492,10 +459,6 @@
 
   .resize-y {
     resize: vertical;
-  }
-
-  .grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .flex-col {
@@ -655,10 +618,6 @@
     background-color: var(--color-blue-50);
   }
 
-  .bg-blue-200 {
-    background-color: var(--color-blue-200);
-  }
-
   .bg-blue-600 {
     background-color: var(--color-blue-600);
   }
@@ -683,10 +642,6 @@
     background-color: var(--color-green-200);
   }
 
-  .bg-green-500 {
-    background-color: var(--color-green-500);
-  }
-
   .bg-green-600 {
     background-color: var(--color-green-600);
   }
@@ -697,10 +652,6 @@
 
   .bg-red-200 {
     background-color: var(--color-red-200);
-  }
-
-  .bg-red-500 {
-    background-color: var(--color-red-500);
   }
 
   .bg-red-700 {
@@ -747,14 +698,6 @@
     padding-inline: calc(var(--spacing) * 5);
   }
 
-  .px-10 {
-    padding-inline: calc(var(--spacing) * 10);
-  }
-
-  .px-20 {
-    padding-inline: calc(var(--spacing) * 20);
-  }
-
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
   }
@@ -771,12 +714,12 @@
     padding-block: calc(var(--spacing) * 4);
   }
 
-  .py-6 {
-    padding-block: calc(var(--spacing) * 6);
-  }
-
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
+  }
+
+  .pt-4 {
+    padding-top: calc(var(--spacing) * 4);
   }
 
   .pb-2 {
@@ -793,10 +736,6 @@
 
   .text-center {
     text-align: center;
-  }
-
-  .text-right {
-    text-align: right;
   }
 
   .text-2xl {
@@ -983,10 +922,6 @@
       background-color: var(--color-gray-100);
     }
 
-    .hover\:bg-gray-200:hover {
-      background-color: var(--color-gray-200);
-    }
-
     .hover\:bg-gray-300:hover {
       background-color: var(--color-gray-300);
     }
@@ -995,20 +930,12 @@
       background-color: var(--color-gray-800);
     }
 
-    .hover\:bg-green-600:hover {
-      background-color: var(--color-green-600);
-    }
-
     .hover\:bg-green-700:hover {
       background-color: var(--color-green-700);
     }
 
     .hover\:bg-red-50:hover {
       background-color: var(--color-red-50);
-    }
-
-    .hover\:bg-red-600:hover {
-      background-color: var(--color-red-600);
     }
 
     .hover\:text-gray-900:hover {
@@ -1029,11 +956,6 @@
     }
   }
 
-  .focus\:ring-1:focus {
-    --tw-ring-shadow: var(--tw-ring-inset, ) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-
   .focus\:ring-2:focus {
     --tw-ring-shadow: var(--tw-ring-inset, ) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1047,14 +969,6 @@
     --tw-ring-color: var(--color-gray-400);
   }
 
-  .focus\:ring-green-500:focus {
-    --tw-ring-color: var(--color-green-500);
-  }
-
-  .focus\:ring-red-500:focus {
-    --tw-ring-color: var(--color-red-500);
-  }
-
   .focus\:ring-offset-2:focus {
     --tw-ring-offset-width: 2px;
     --tw-ring-offset-shadow: var(--tw-ring-inset, ) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1066,16 +980,8 @@
   }
 
   @media (width >= 40rem) {
-    .sm\:block {
-      display: block;
-    }
-
     .sm\:flex-row {
       flex-direction: row;
-    }
-
-    .sm\:items-center {
-      align-items: center;
     }
 
     .sm\:justify-between {
@@ -1106,10 +1012,6 @@
 
     .md\:flex-row {
       flex-direction: row;
-    }
-
-    .md\:items-center {
-      align-items: center;
     }
   }
 
